[workspace]
resolver = "2"
members = [
  "crates/*",
  # "examples/*",
  "py-otl",
]


[workspace.package]
version = "0.1.0"
authors = ["James Connolly <james@silogy.io>"]
edition = "2021"

#[package]
#name = "otl"
#version = "0.1.0"
#edition = "2021"
#
## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#name = "otl"
#crate-type = ["cdylib"]

[workspace.dependencies]
pyo3 = "0.21.1"
dice = { git = "https://github.com/facebook/buck2", rev = "9e17b241" }
allocative = { git = "https://github.com/facebook/buck2", rev = "9e17b241" }
dupe = { git = "https://github.com/facebook/buck2", rev = "9e17b241" }
thiserror = "1.0.58"
serde = "1.0.197"
serde_yaml = "0.9.34"
tokio = "1.37.0"
futures = "0.3.30"
derive_more = "0.99.17"
async-trait = "0.1.79"
fuzzy-matcher = "0.3.7"
pythonize = "0.21.1"
serde_json = "1.0.115"
otl-events = { path = "crates/otl-events", default-features = false }
otl-core = { path = "crates/otl-core", default-features = false }
otl-graph = { path = "crates/otl-graph", default-features = false }
py-otl = { path = "py-otl", default-features = false }


[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
