[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "otl"
version = "0.1.0"
description = "otl is a system to describe tests for eda"
authors = ["James <james@silogy.io>"]



[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
pyyaml = "^6.0.1"
pydantic = "^2.6.4"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
sphinx = "7.1.0"


[tool.poetry.scripts]
otl-cli = "otl.cli:main"

