[package]
name = "pysmelt"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pysmelt"
crate-type = ["cdylib"]


[dependencies]

smelt-core = { workspace = true }
smelt-graph = { workspace = true, features = ["docker"] }
smelt-events = { workspace = true }
smelt-data = { workspace = true }


anyhow = { workspace = true }

dice = { workspace = true }
allocative = { workspace = true }
dupe = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
derive_more = { workspace = true }
async-trait.workspace = true
fuzzy-matcher = { workspace = true }
pythonize = { workspace = true }
pyo3 = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
