[package]
name = "otl-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
otl-core = { workspace = true }
otl-events = { workspace = true }
otl-data = { workspace = true }
otl-graph = { workspace = true }
async-trait.workspace = true
ratatui = "0.26.2"
