[package]
name = "otl-controller"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

otl-graph = { workspace = true }
otl-client = { workspace = true }
otl-data = { workspace = true }
otl-events = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
