[package]
name = "otl-graph"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
otl-core = { workspace = true }
otl-events = { workspace = true }

dice = { workspace = true }
allocative = { workspace = true }
dupe = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
derive_more = { workspace = true }
async-trait = { workspace = true }
fuzzy-matcher = { workspace = true }
pythonize = { workspace = true }

serde_json = { workspace = true }
