[package]
name = "smelt-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dice = { workspace = true }
allocative = { workspace = true }
dupe = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
derive_more = { workspace = true }
async-trait = { workspace = true }
fuzzy-matcher = { workspace = true }
pyo3 = { workspace = true }
pythonize = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
