[package]
name = "smelt-data"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }

protoc-bin-vendored = "3.0.0"

[dependencies]
prost = { workspace = true }
dupe = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
hex = { workspace = true }
allocative = { workspace = true }
tracing = { workspace = true }
