[package]
name = "smelt-events"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
smelt-data = { workspace = true }
smelt-core = { workspace = true }

dice = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
allocative = { workspace = true }
dupe = { workspace = true }
derive_more = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
whoami = "1.5.1"
