[package]
name = "smelt-graph"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smelt-core = { workspace = true }
smelt-events = { workspace = true }
smelt-data = { workspace = true }
anyhow = { workspace = true }
dice = { workspace = true }
allocative = { workspace = true }
dupe = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
derive_more = { workspace = true }
async-trait = { workspace = true }
fuzzy-matcher = { workspace = true }
pythonize = { workspace = true }
static_interner = { workspace = true }

serde_json = { workspace = true }
tokio-stream = "0.1.15"
whoami = "1.5.1"
bollard = { version = "0.16.1", optional = true }
sha1 = "0.10.6"
hex.workspace = true
libproc = "0.14.8"
tracing = { workspace = true }


[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
mach2 = "0.4.2"

[features]
default = ["docker"]
docker = ["dep:bollard"]
